--- a/Siembra/WWTS.Siembra/WWTS.Siembra.Modulo/My Project/Resources.resx
+++ b/Siembra/WWTS.Siembra/WWTS.Siembra.Modulo/My Project/Resources.resx
@@ -130,4 +130,7 @@
   <data name="save16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\save16.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="siembraicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\siembraicon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
