--- a/Roles/WWTS.Roles/WWTS.Roles.Modulo/Mantenimientos/FrmCambiarAreaLote.resx
+++ b/Roles/WWTS.Roles/WWTS.Roles.Modulo/Mantenimientos/FrmCambiarAreaLote.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,19 +117,4 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="HeaderStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>166, 17</value>
-  </metadata>
-  <metadata name="MenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>289, 17</value>
-  </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnReporte.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAGdYAABnWARjRyu0AAAB2SURBVDhPY6AKeLvU7z8x+PrcCBQM1Q4x4P//7yThNdkm
-        2A3I2e8HxhGbHMHYfr4JHNs0GxE2wCBTBy8maACxGKsB2GzEhvEaAKKvr6xEoZHZBA0ABSBIMTKNzB6u
-        LgAlS5gkMRinAaRgDANAAqRiqHZKAAMDAGc0QN2Y0W9UAAAAAElFTkSuQmCC
-</value>
-  </data>
 </root>
